Update backdoor.java